resolve start problems

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}.%d{yyyy-MM-dd}.%i.gz
 logging.logback.rollingpolicy.clean-history-on-start=true
 
 # mysql config
+mybatis.lazy-initialization=true
 mybatis.inject-sql-session-on-mapper-scan=true
 mybatis.mapper-locations=classpath:com/example/**/mapper/*.xml
 
