--- a/build.gradle
+++ b/build.gradle
@@ -33,15 +33,16 @@ allprojects {
     dependencyManagement {
         dependencies {
             dependency('org.springframework.boot:spring-boot-starter:3.0.2') {
-                exclude 'org.apache.logging.log4j:log4j-to-slf4j'
-                exclude 'org.slf4j:jul-to-slf4j'
+                exclude('org.apache.logging.log4j:log4j-to-slf4j')
+                exclude('org.slf4j:jul-to-slf4j')
             }
 
             dependency('org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1') {
-                exclude 'org.springframework.boot:spring-boot-starter'
+                exclude('org.springframework.boot:spring-boot-starter-jdbc')
+                exclude('org.springframework.boot:spring-boot-starter')
             }
+
             dependency('com.baomidou:mybatis-plus-boot-starter:3.5.3.1')
-            dependency('org.mybatis:mybatis:3.5.11')
             dependency('org.reflections:reflections:0.10.2')
         }
     }
@@ -55,6 +56,8 @@ allprojects {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-webflux')
+    implementation('org.springframework.boot:spring-boot-starter-jdbc')
+
     implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter')
 
     runtimeOnly('com.mysql:mysql-connector-j')
